1.2.14pre7: 2004-01-03
	- fix reaping of children in icewm-session

1.2.14pre6: 2003-12-30
	- fix "lost focus when maximizing" in mouse-focus mode
	- fix "Super+key" bindings again
	- remove line/string length limits for preferences file

1.2.14pre5: 2003-12-25
	- fix problem with replaying Super+X when not activating menu
	- build fixes for FreeBSD
	- build fix for Xrandr < 1.0 (not tested)
	- *bsd cpu status support (Hanspeter Roth)

1.2.14pre4: 2003-12-23
	- movesize-fx obsoleted
	- wm-session obsoleted
	- header cleanups
	- fix monitor for linux 2.0 (Miroslav Stibor)
        - fix focus/click with multiple emacs frames
	- all font preferences now have a ...Xft variant that 
          can be set to fontconfig pattern specification.
          example: MenuFontNameXft=sans-serif:size=12:bold
        - enabled shaped window decorations by default (configure)

1.2.14pre3: 2003-12-22
	- debian fixes (Eduard Bloch)
	- fixes and cleanups

1.2.14pre2: 2003-12-20
	- compile fixes for egcs-2.91.66 (Miroslav Stibor)
	- icewm-session explicitly terminates icewm 
          and icewmtray (Hanspeter Roth)
        - code refactoring and cleanup

1.2.14pre1:  2003-11-01
	- initial support for XRANDR
	- enable alt+Tab in LITE
	- only allow a restricted set of prefs to be set in a theme
	- fix shutdown in logout menu (was a reboot)
	- fix crash on startup when TaskBarShowWindowListMenu=0 and
          TaskBarDoubleHeight=1 set (Alexander Portnoy - alexpor)
	- icesound fixes (some variants need testing)
	- nested themes menus (Eduard Bloch)
	- support for rollover titlebar buttons (Rob Costello)
	- CPU status fixes. New option: TaskBarCPUDelay (Miroslav Stibor)
	- Net status fixes. New options: TaskBarNetSamples, 
	  TaskBarNetDelay (Miroslav Stibor)
	- fixes to icewm-session
	- Ctrl+Alt+Numpad moves window (Bert Wesarg)

1.2.13: 2003-09-27
	- build fixes
	- only handle KDE tray protocol when icewmtray running

1.2.13pre3: 2003-09-14